--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "deploy": "deploy.sh"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
+    "coffee-script": "~1.2.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
